# langbridge

./: .gitignore  LICENSE  README.md  poetry.toml  pyproject.toml  sample-usage.sh
examples/: functions.json  input.jsonl  output.jsonl  prompt.txt  response-format.json
src/langbridge/callbacks/: __init__.py  base.py  file.py  manager.py
src/langbridge/callbacks/analytics/: __init__.py  langfuse.py
src/langbridge/cli/: __init__.py  generation.py
src/langbridge/cli/process/: __init__.py
src/langbridge/generation/: __init__.py  anthropic.py  base.py  openai.py
src/langbridge/generations/: base.py
src/langbridge/handlers/: __init__.py  generation.py  handler.py
src/langbridge/handlers/generation/: __init__.py  anthropic.py  base.py  openai.py
src/langbridge/model_params/: params.py
src/langbridge/parameters/: __init__.py  generation.py
src/langbridge/schema/: __init__.py  inputs.py  openai.py  response.py
src/langbridge/settings/: __init__.py  anthropic.py
src/langbridge/trackers/: progress.py  usage.py
src/langbridge/utils/: __init__.py  log_handler.py
src/openai_processor/api_agents/: __init__.py  base.py
src/openai_processor/api_agents/chat/: __init__.py  base.py
src/openai_processor/api_requests/: __init__.py  api_requests.py
src/openai_processor/cli/: __init__.py
src/openai_processor/cli/process/: __init__.py
src/openai_processor/generations/: __init__.py  base.py
src/openai_processor/handlers/: __init__.py  handler.py
src/openai_processor/model_params/: __init__.py  params.py
src/openai_processor/settings/: __init__.py  langfuse.py  openai.py  settings.py
src/openai_processor/trackers/: __init__.py  stats.py  statustracker.py  usage.py
src/openai_processor/utils/: log_handler.py
src/tests/integration_tests/callbacks/: test_callback_manager.py
src/tests/unit_tests/generation/: test_openai.py
src/tests/unit_tests/handlers/: test_openai.py
