[tool.poetry]
name = "LangBridge"
version = "0.0.1"
description = "A framework to make parallel and user rate limited API calls to LLM Services / APIs"
authors = ["vignesh-nswamy"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "langbridge", from = "src" },
]
repository = "https://github.com/vnaray/langbridge"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
openai = "0.28.1"
tiktoken = "0.5.1"
typer = "0.9.0"
rich = "13.6.0"
pydantic = "1.10.12"
langchain = "0.0.314"
langfuse = "1.0.38"
anthropic = "0.4.1"

[tool.poetry.scripts]
langbridge = "langbridge.cli:app"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"


[tool.poetry.group.test.dependencies]
pytest = "7.4.2"
pytest-asyncio = "0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
